# genvars

./: .gitignore  README.md  pyproject.toml
genvars/: __main__.py
genvars/core/: generator.py
tests/integration/: test_cli.py
tests/integration/statics/: expected.md
tests/integration/statics/common/: settings.py
