[tool.poetry]
name = "genvars"
version = "0.1.3"
description = "Generate description tables for your Pydantic's BaseSettings"
authors = ["Mikhail Liamets <mikhail@liamets.dev>"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
